(lang dune 3.20)

(name w)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license Apache-2.0)

(documentation https://url/to/documentation)

(package
 (name w)
 (synopsis "A short synopsis")
 (description "A longer description")
 (license Apache-2.0)
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
